--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,7 @@
 lidar:
   - driver:
       use_gpu: false
-      source_type: 1                                  # The type of data source, 1: real-time lidar connection, 2: pcap, 3: packet rosbag, 4: serial    
+      source_type: 4                                  # The type of data source, 1: real-time lidar connection, 2: pcap, 3: packet rosbag, 4: serial
       # Depending on the type of source_type, fill in the corresponding configuration block (lidar_udp_type, pcap_type, serial_type)
       lidar_udp_type:
         device_ip_address: 192.168.1.201              # host_ip_address. If empty(""), the source ip of the udp point cloud is used
@@ -22,8 +22,8 @@ lidar:
         ptc_mode: 0                                   # The ptc mode: [0] tcp [1] tcp_ssl
         # tcp_ssl use
         certFile: ""                                  # Represents the path of the user's certificate
-        privateKeyFile: ""                            # Represents the path of the user's private key 
-        caFile: ""                                    # Represents the path of the CA certificate 
+        privateKeyFile: ""                            # Represents the path of the user's private key
+        caFile: ""                                    # Represents the path of the CA certificate
 
       pcap_type:
         pcap_path: "Your pcap file"                         # The path of pcap file
@@ -32,21 +32,21 @@ lidar:
 
         pcap_play_synchronization: true                     # pcap play rate synchronize with the host time
         pcap_play_in_loop: false
-      
+
       rosbag_type:
         correction_file_path: "Your correction file path"   # The path of correction file
         firetimes_path: "Your firetime file path"           # The path of firetimes file
 
       serial_type:
-        rs485_com: "Your serial port name for receiving point cloud"  # if using JT16, Port to receive the point cloud
+        rs485_com: "/dev/ttyUSB0"  # if using JT16, Port to receive the point cloud
         rs232_com: "Your serial port name for sending cmd"            # if using JT16, Port to send cmd
-        point_cloud_baudrate: 3125000
+        point_cloud_baudrate: 3000000
         correction_save_path: ""                                      # turn on when you need to store angle calibration files(from lidar)
-        correction_file_path: "Your correction file path"             # The path of correction file
-      
+        correction_file_path: "/home/taocheng/deerbaby_ws/src/HesaiLidar_ROS_2.0/config/JT16_sample_angle.csv"             # The path of correction file
+
       # public module
-      use_timestamp_type: 0                 # 0 use point cloud timestamp; 1 use receive timestamp
-      frame_start_azimuth: 0                # Frame azimuth for Pandar128, range from 1 to 359, set it less than 0 if you do not want to use it      
+      use_timestamp_type: 1                 # 0 use point cloud timestamp; 1 use receive timestamp
+      frame_start_azimuth: 0                # Frame azimuth for Pandar128, range from 1 to 359, set it less than 0 if you do not want to use it
       #transform param
       transform_flag: false
       x: 0
@@ -75,6 +75,6 @@ lidar:
       # ros_send_correction_topic: /lidar_corrections # Topic used to send correction through ROS
       # ros_send_firetime_topic: /lidar_firetime
       # ros_send_ptp_topic: /lidar_ptp                # Topic used to send PTP lock status, offset through ROS
-      send_packet_ros: false                          # true: Send packets through ROS 
-      send_point_cloud_ros: true                      # true: Send point cloud through ROS    
-      send_imu_ros: true                              # true: Send imu through ROS    
+      send_packet_ros: false                          # true: Send packets through ROS
+      send_point_cloud_ros: true                      # true: Send point cloud through ROS
+      send_imu_ros: true                              # true: Send imu through ROS
