--- a/config/config.yaml
+++ b/config/config.yaml
@@ -49,13 +49,13 @@ lidar:
       use_timestamp_type: 1                 # 0 use point cloud timestamp; 1 use receive timestamp
       frame_start_azimuth: 0                # Frame azimuth for Pandar128, range from 1 to 359, set it less than 0 if you do not want to use it
       #transform param
-      transform_flag: false
+      transform_flag: true
       x: 0
       y: 0
       z: 0
       roll: 0
       pitch: 0
-      yaw: 0
+      yaw: 1.57 #0
       #fov config, [fov_start, fov_end] range [1, 359], [-1, -1]means use default
       fov_start: -1
       fov_end:  -1
@@ -78,4 +78,4 @@ lidar:
       # ros_send_ptp_topic: /lidar_ptp                # Topic used to send PTP lock status, offset through ROS
       send_packet_ros: false                          # true: Send packets through ROS
       send_point_cloud_ros: true                      # true: Send point cloud through ROS
-      send_imu_ros: true                              # true: Send imu through ROS
+      send_imu_ros: false #true                              # true: Send imu through ROS
