--- a/config/config.yaml
+++ b/config/config.yaml
@@ -57,10 +57,10 @@ lidar:
       pitch: 0
       yaw: 1.57 #0
       #fov config, [fov_start, fov_end] range [1, 359], [-1, -1]means use default
-      fov_start: -1
-      fov_end:  -1
+      fov_start: 88
+      fov_end:  272
       # other config
-      enable_packet_loss_tool: true         # enable the udp packet loss detection tool
+      enable_packet_loss_tool: false         # enable the udp packet loss detection tool
       distance_correction_flag: false       # set to true when optical centre correction needs to be turned on
       xt_spot_correction: false             # Set to TRUE when XT S point cloud layering correction is required
       device_udp_src_port: 0                # Filter point clouds for specified source ports in case of multiple lidar, setting >=1024
